examples/test/testpolicy12536.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12536
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key39: value46
      key48: value3
      key1: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value45
          key42: value48
      podSelector:
        matchLabels:
          key30: value42
          key0: value23
          key36: value30
